--- a/server/render.yaml
+++ b/server/render.yaml
@@ -15,7 +15,7 @@ services:
           name: therapist-finder-db
           property: connectionString
       - key: CORS_ORIGIN
-        value: https://therapist-finder-one.vercel.app
+        value: https://therapist-finder-one.netlify.app
       - key: API_PREFIX
         value: /api/v1
 
