--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,6 +1,7 @@
 [build]
-  publish = "dist"
-  command = "npm run build"
+  base = "client"
+  publish = "client/dist"
+  command = "cd client && npm install && npm run build"
 
 [build.environment]
   NODE_VERSION = "18"
