--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -20,7 +20,13 @@
     Access-Control-Allow-Headers = "Content-Type, Authorization"
 
 [[headers]]
-  for = "/favicon.*"
+  for = "/favicon.ico"
   [headers.values]
     Cache-Control = "public, max-age=31536000"
     Content-Type = "image/x-icon"
+
+[[headers]]
+  for = "/favicon.svg"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000"
+    Content-Type = "image/svg+xml"
